fix (hopefully) all File to URL conversion issues (specially on windows OSs as a colon character is in each url)